<resources>
    <string name="app_name">Notice</string>
    <string name="notice">Notice</string>
    <string name="search_icon">Sreach Icon</string>
    <string name="looking_for">Looking for ...</string>
    <string name="add">Add</string>
    <string name="fab">fab</string>
    <string name="back_button">Back Button</string>
    <string name="done">Done</string>
    <string name="note_title">Note Title</string>
    <string name="what_s_in_your_mind">What\'s in your mind ?</string>
    <string name="color_button">Color Button</string>
    <string name="uplaoded_image">Uplaoded Image</string>
    <string name="upload_image">Upload Image</string>
</resources>