<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".activities.MainActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/notice"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <!-- Search Bar -->
    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_tv"
        android:orientation="horizontal"
        android:background="@drawable/background_search"
        android:paddingHorizontal="@dimen/_10sdp"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            app:tint="@color/search_icon"
            android:src="@drawable/ic_search"
            android:layout_marginEnd="@dimen/_8sdp"
            android:contentDescription="@string/search_icon"/>

        <EditText
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@null"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:hint="@string/looking_for"
            android:textColorHint="@color/hint"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            android:autofillHints="no" />
    </LinearLayout>
    <!-- Recycler View -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:clipToPadding="false"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar"
        tools:layout_editor_absoluteX="3dp" />

    <!-- Float Action Button -->
    <ImageView
        android:id="@+id/add_note"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/fab_background"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/fab" />

</androidx.constraintlayout.widget.ConstraintLayout>