<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".activities.CreateNote">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:layout_marginBottom="@dimen/_40sdp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">
            <!-- Back Button -->
            <ImageView
                android:id="@+id/back_button"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/icon"
                android:contentDescription="@string/back_button"/>
            <!-- Done Button -->
            <ImageView
                android:id="@+id/done_button"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="@drawable/done_background"
                android:contentDescription="@string/done"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_done"
                app:layout_constraintBottom_toBottomOf="@+id/back_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/back_button"
                app:layout_constraintVertical_bias="0.86"
                app:tint="@color/icon" />
            <!-- Note Title -->
            <EditText
                android:id="@+id/note_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:background="@null"
                android:hint="@string/note_title"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/hint"
                android:textSize="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/back_button"
                android:autofillHints="no" />
            <!-- Time & Date -->
            <TextView
                android:id="@+id/time_and_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_4sdp"
                app:layout_constraintStart_toStartOf="@+id/note_title"
                app:layout_constraintTop_toBottomOf="@id/note_title"
                android:textColor="@color/hint"
                />
            <!-- Note Content -->
            <EditText
                android:id="@+id/note_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/what_s_in_your_mind"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/_100sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/hint"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintEnd_toEndOf="@+id/note_title"
                app:layout_constraintStart_toStartOf="@+id/note_title"
                app:layout_constraintTop_toBottomOf="@+id/time_and_date"
                android:autofillHints="no" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/image_view"
                app:riv_corner_radius="@dimen/_16sdp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                app:layout_constraintTop_toBottomOf="@id/note_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/uplaoded_image" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <include layout="@layout/bottom_sheet_layout" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>